  - `override void ChildDispose(bool)` is now obsolete.  Use `override void Dispose(bool)` instead
  - The `int ReadBytes` property was changed to `long ReadBytes`
  - The `int TotalBytes` property was changed to `long TotalBytes`
  - The `ReadBytes` and `SecondsRead` properties now expose their setters to child classes
- The `CustomFileFormat` type and its API is now obsolete.  Use the `CustomAudioFormat` type instead
  - `MonoSoundLibrary.RegisterFormat(string, Func<Stream, FormatWav>, Func<Stream, StreamPackage>)` is now obsolete.  Use `MonoSoundLibrary.RegisterFormat(CustomAudioFormat)` instead

v1.6.2
- Replaced all usage of File.OpenRead() with TitleContainer.OpenStream(), since the former prevented MonoSound from loading on Android projects

v1.6.1
- Fixed an issue where filters on a streamed sound would have noise

v1.6.0.0
- Modified the API to be more user-friendly and sensible
- Made the following classes public:  StreamPackage, WavStream, XnbStream, Mp3Stream, OggStream, WavebankStream
- Fixed an issue that causes sound streaming to not work as intended
- Added an API for reading sound files in custom formats via MonoSoundLibrary.RegisterFormat()
- Improved the logic responsible for caching loaded wavebanks
- Fixed some bugs in the streaming logic which caused looping XWB sounds to sometimes fail
- Added logic to allow streamed sounds to have effects applied to them dynamically
- Added a control for specifying the length of the buffers read for streamed sounds.  Defaults to 0.1 seconds.
- Added proper safeguards to Filter object freeing in order to prevent some nasty CLR crashes
- Added a safeguard for MP3Sharp audio loading

v1.5.2.0
- Made the MonoSound.Audio.FormatWav class public
- WAVE data with metadata can now be loaded by MonoSound

v1.5.1.0
- Added support for loading SoundEffect instances from XACT wavebank streams (overload was missing)

v1.5.0.0
- Added support for loading SoundEffect instances from System.IO.Stream instances