@@ -8,6 +8,7 @@
   - The `int ReadBytes` property was changed to `long ReadBytes`
   - The `int TotalBytes` property was changed to `long TotalBytes`
   - The `ReadBytes` and `SecondsRead` properties now expose their setters to child classes
+  - The `endOfStream` parameter from `void ReadSamples(double, out byte[], out int, out bool)` has been renamed to `checkLooping`
 - The `CustomFileFormat` type and its API is now obsolete.  Use the `CustomAudioFormat` type instead
   - `MonoSoundLibrary.RegisterFormat(string, Func<Stream, FormatWav>, Func<Stream, StreamPackage>)` is now obsolete.  Use `MonoSoundLibrary.RegisterFormat(CustomAudioFormat)` instead
 
